TFP-2394 tar vare på yf mottatt dato etter uttak regelkjøring og fakta om uttak aksjonspunkt